--- a/src/app/Paginas/Body/backup/backup.component.html
+++ b/src/app/Paginas/Body/backup/backup.component.html
@@ -3,18 +3,17 @@
     <div class="row">
       <div class="col-2">
         <div class="row" style="display: inline-block">
-          <button class="btn btn-outline-info rounded-circle" style="width: 50px; height: 50px">
+          <button class="btn btn-outline-info rounded-circle" style="width: 50px; height: 50px; margin-right: 5px;" routerLink="/backups">
           <span>
-            <fa-icon [icon]="util.faArrowLeft"></fa-icon>
+            <fa-icon [icon]="util.faChevronLeft"></fa-icon>
           </span>
           </button>
-          <button class="btn btn-outline-info rounded-circle" style="width: 50px; height: 50px">
+          <button class="btn btn-outline-info rounded-circle" style="width: 50px; height: 50px; margin-left: 5px;">
           <span>
-            <fa-icon [icon]="util.faRecycle"></fa-icon>
+            <fa-icon [icon]="util.faRedo"></fa-icon>
           </span>
           </button>
         </div>
-
       </div>
       <div class="col-8">
         <h2 class="text-light">Detalles Respaldo # {{numBack}} Backup {{idBack}}</h2>
